somewhat more of a start

--- a/index.html
+++ b/index.html
@@ -9,12 +9,31 @@
 <body>
     <h1>zzz optimizer</h1>
     <script src="./calc.js"></script>
-    <p id="result">uhhhh</p>
-    <button id="calculate-button">Calculate</button>
+    <script src="index.js"></script>
+    <label for="character-select">Choose a character:</label>
+    <select id="character-select">
+        <option value="lycaon">Lycaon</option>
+        <option value="astra">Astra</option>
+        <option value="billy">Billy</option>
+        <option value="yixuan">Yixuan</option>
+    </select>
+    <label for="level-input">Enter level:</label>
+    <input type="number" id="level-input" min="1" max="16" />
     <script>
-        document.getElementById("calculate-button").addEventListener("click", function() {
-            document.getElementById("result").innerText = calculateAttack(billy, wengine_starlight_engine_replica);
+        const characterSelect = document.getElementById("character-select");
+        const levelInput = document.getElementById("level-input");
+        const calculateButton = document.getElementById("calculate-button");
+
+        calculateButton.addEventListener("click", () => {
+            const selectedCharacter = characterSelect.value;
+            const level = parseInt(levelInput.value);
+            // Call a function to perform the calculation for the selected character
+            calculateForCharacter(selectedCharacter);
         });
     </script>
+    <button id="calculate-button">Calculate</button>
+    <div id="result"></div>
+
 </body>
 </html>
+
